<resources>
    <string name="app_name">OnedayOnepage</string>
    <string name="app_name_kr">일일일독</string>
    <string name="action_settings">Settings</string>
    <string name="word_sample">Hello second fragment. Arg: %1$s</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="activity_login">login activity</string>
    <string name="activity_main">main activity</string>
    <string name="activity_book_search">book search activity</string>
    <string name="activity_book_detail">book detail activity</string>
    <string name="activity_book_new">new book activity</string>
    <string name="activity_book_edit">edit book activity</string>
    <string name="activity_add_note">add note activity</string>
    <string name="activity_library">library activity</string>
    <string name="activity_calendar">calendar activity</string>
    <string name="activity_mypage">mypage activity</string>
    <string name="fragment_splash">splash fragment</string>
    <string name="fragment_login_contents">login contents fragment</string>
    <string name="fragment_login_no_google_alert">no google user alert</string>
    <string name="fragment_login_sign_up_1">sign up fragment1</string>
    <string name="fragment_login_sign_up_2">sign up fragment2</string>
    <string name="fragment_main_old_book">old book fragment</string>
    <string name="fragment_main_no_book">no book fragment</string>
    <string name="fragment_search_contents">search contents fragment</string>
    <string name="fragment_searchbar">search bar fragment</string>
    <string name="fragment_search_result">search result fragment</string>
    <string name="fragment_book_detail_contents">book detail content fragment</string>
    <string name="fragment_book_detail_excerpt_text">excerpt text fragment</string>
    <string name="fragment_book_detail_excerpt_image">excerpt image fragment</string>
    <string name="fragment_book_detail_memo">memo fragment</string>
    <string name="fragment_write_note">write note fragment</string>
    <string name="fragment_library_style1">library style1 fragment</string>
    <string name="fragment_library_style2">library style2 fragment</string>
    <string name="fragment_library_style3">library style3 fragment</string>
    <string name="fragment_calender_contents">calender fragment</string>
    <string name="fragment_mypage_contents">mypage fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button_text_login">기존 회원 로그인</string>
    <string name="login_button_text_google">구글아이디로 시작하기</string>
    <string name="login_button_text_anonymous">이메일로 시작하기</string>
    <string name="login_button_text_sign_out">로그아웃</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="anonymous_login_alert">연동을 하지 않고 사용하면\n사용자 정보를 잃을 수 있어요!</string>
    <string name="anonymous_login_yes">이대로 할래요</string>
    <string name="anonymous_login_no">연동할래요</string>
    <string name="anonymous_login_fail">익명로그인에 실패했어요. 다시 시도해주세요.</string>
    <string name="first_user_bottom_button_next">계속하기</string>
    <string name="first_user_bottom_button_skip">나중에 할래요</string>
    <string name="first_user_bottom_button_yes">아니에요</string>
    <string name="first_user_bottom_button_no">맞아요!</string>
    <string name="first_user_layout1_text1">서재에 들어가볼까요?</string>
    <string name="first_user_layout1_text2">이름을 알려주세요.</string>
    <string name="first_user_layout1_text3">사용자 이름을 입력해주세요.</string>
    <string name="first_user_layout2_text1">서재에 들어가볼까요?</string>
    <string name="first_user_layout2_text2">사용자 등록을 위한\n이메일이 필요해요.</string>
    <string name="first_user_layout2_text3">abcd@email.com</string>
    <string name="first_user_layout21_password_hint">비밀번호를 입력해주세요.</string>
    <string name="first_user_layout21_password_message0">""</string>
    <string name="first_user_layout21_password_message1">6글자 이상, 영문과 숫자를 포함해야 돼요</string>
    <string name="first_user_layout21_password_message2">올바른 비밀번호에요.</string>
    <string name="first_user_layout21_passwordcheck_hint">다시 한 번 입력해주세요.</string>
    <string name="first_user_layout21_passwordcheck_message0">""</string>
    <string name="first_user_layout21_passwordcheck_message1">비밀번호가 일치하지 않아요.</string>
    <string name="first_user_layout21_passwordcheck_message2">비밀번호가 일치해요.</string>
    <string name="first_user_layout21_passwordcheck_message3">비밀번호 먼저 입력해주세요.</string>
    <string name="first_user_layout3_text1">서재에 들어가볼까요?</string>
    <string name="first_user_layout3_text2">프로필 이미지를\n등록해보세요.</string>
    <string name="first_user_layout4_text1">이 정보가 맞나요?</string>
    <string name="account_toolbar_title">계정 관리</string>
    <string name="account_user_name">사용자 이름</string>
    <string name="account_user_email">abcd@email.com</string>
    <string name="account_linkWithSignIn">계정 연동</string>
    <string name="account_passwordUpdate">비밀번호 변경</string>
    <string name="account_signOut">로그아웃</string>
    <string name="account_cleanup">정보 초기화</string>
    <string name="account_userDelete">회원 탈퇴</string>
    <string name="account_signOut_alert">로그아웃하시겠습니까?</string>
    <string name="account_signOut_no">아니오</string>
    <string name="account_signOut_yes">네</string>
    <string name="account_userDelete_alert">회원 탈퇴시 정보를 복구할 수 없습니다.\n정말 탈퇴하실건가요?</string>
    <string name="account_userDelete_no">아니오</string>
    <string name="account_userDelete_yes">회원탈퇴</string>
    <string name="account_delete_toolbar_title">회원탈퇴</string>
    <string name="account_delete_text1">회원탈퇴 시 정보를 복구할 수 없어요.</string>
    <string name="account_delete_text2">정말로 회원탈퇴하시겠어요?</string>
    <string name="account_delete_input_email_hint">abcd@email.com</string>
    <string name="account_delete_input_email_message">탈퇴할 계정의 이메일을 입력해주세요.</string>
    <string name="account_delete_bottom_button_text">회원탈퇴</string>
    <string name="account_delete_complete_text1">안녕히가세요😢</string>
    <string name="account_delete_complete_text2">떠나신다니 아쉽습니다.</string>
    <string name="account_delete_complete_button_text">메인으로 이동하기</string>
    <string name="account_cleanup_toolbar_text">정보 초기화</string>
    <string name="account_cleanup_text1">정보 초기화 시 기존 정보를 복구할 수 없어요.</string>
    <string name="account_cleanup_text2">정말로 정보를 초기화 하시겠어요?</string>
    <string name="account_cleanup_input_hint">abcd@email.com</string>
    <string name="account_cleanup_input_message">정보를 초기화할 계정의 이메일을 입력해주세요.</string>
    <string name="account_cleanup_bottom_button_text">정보 초기화</string>
    <string name="account_cleanup_complete_text1">정보가 초기화됐어요😮</string>
    <string name="account_cleanup_complete_text2">때로는 과감한 새시작이 필요한 법이죠.</string>
    <string name="account_cleanup_complete_button_text">메인으로 이동하기</string>
    <string name="account_password_change_toolbar_text">비밀번호 변경</string>
    <string name="account_password_change_old_password_text">기존 비밀번호</string>
    <string name="account_password_change_old_password_input_hint">기존 비밀번호를 입력해주세요.</string>
    <string name="account_password_change_old_password_input_message">비밀번호를 입력해주세요.</string>
    <string name="account_password_change_new_password_text">변경할 비밀번호</string>
    <string name="account_password_change_new_password_input_hint">6자리 이상으로 입력해주세요.</string>
    <string name="account_password_change_new_password_input_message">비밀번호를 입력해주세요.</string>
    <string name="account_password_change_re_password_text">비밀번호 확인</string>
    <string name="account_password_change_re_password_input_hint">다시 한 번 입력해 주세요.</string>
    <string name="account_password_change_re_password_input_message">비밀번호를 입력해주세요.</string>
    <string name="account_password_change_complete_text">비밀번호가 변경됐어요.</string>
    <string name="account_password_change_complete_button_text">확인했어요</string>
    <string name="account_username_update_text1">변경할 이름을 입력해주세요.</string>
    <string name="account_username_update_input_hint">사용자 이름</string>
    <string name="account_username_update_bottom_button_no">취소</string>
    <string name="account_username_update_bottom_button_yes">확인</string>
    <string name="account_emailpass_alert_text1">이메일이 올바르지 않습니다.</string>
    <string name="account_emailpass_alert_bottom_button_yes">확인</string>
    <string name="main_no_book">아직 읽고 있는 책이\n없어요</string>
    <string name="main_no_book_read_with_me">함께 책읽기를 시작해볼까요?</string>
    <string name="nav_header_username">사용자 이름</string>
    <string name="main_navi_menu_library">내 서재</string>
    <string name="main_navi_menu_calender">캘린더</string>
    <string name="main_navi_menu_addBook">책 추가</string>
    <string name="main_navi_menu_account">내 계정 관리</string>
    <string name="main_navi_menu_accountReset">정보 초기화</string>
    <string name="main_navi_menu_evaluation">앱 평가하기</string>
    <string name="main_navi_menu_infoDesk">문의하기</string>
    <string name="main_navi_menu_signOut">로그아웃</string>
    <string name="book_detail_title">도서명</string>
    <string name="book_detail_writer">저자</string>
    <string name="book_detail_publish">출판사</string>
    <string name="book_detail_ym">출판연도</string>
    <string name="book_detail_goal">완독목표</string>
    <string name="book_detail_page">쪽</string>
    <string name="book_new_toolbar_title">책 추가</string>
    <string name="book_new_title">도서명</string>
    <string name="book_new_writer">저자</string>
    <string name="book_new_publish">출판사</string>
    <string name="book_new_ym">출판연도</string>
    <string name="book_new_goal">완독목표</string>
    <string name="book_new_tag">태그</string>
    <string name="book_new_page">쪽</string>
    <string name="book_new_title_hint">책의 이름을 입력해주세요.</string>
    <string name="book_new_writer_hint">책의 저자를 입력해주세요.</string>
    <string name="book_new_publish_hint">책의 출판사를 입력해주세요.</string>
    <string name="book_new_publishYM_hint">날짜 선택</string>
    <string name="book_new_tag_hint">경제, IT, 주식, 재태크, 금융</string>
    <string name="book_new_goalYM_hint">날짜 선택</string>
    <string name="book_new_bottom_button_add">책 추가하기</string>
    <string name="book_edit_toolbar_title">책 정보 수정</string>
    <string name="book_edit_title">도서명</string>
    <string name="book_edit_writer">저자</string>
    <string name="book_edit_publish">출판사</string>
    <string name="book_edit_ym">출판연도</string>
    <string name="book_edit_goal">완독목표</string>
    <string name="book_edit_tag">태그</string>
    <string name="book_edit_page">쪽</string>
    <string name="book_edit_title_hint">책의 이름을 입력해주세요.</string>
    <string name="book_edit_writer_hint">책의 저자를 입력해주세요.</string>
    <string name="book_edit_publish_hint">책의 출판사를 입력해주세요.</string>
    <string name="book_edit_publishYM_hint">날짜 선택</string>
    <string name="book_edit_tag_hint">경제, IT, 주식, 재태크, 금융</string>
    <string name="book_edit_goalYM_hint">날짜 선택</string>
    <string name="book_edit_bottom_button_text">수정하기</string>
    <string name="book_search_toolbar_title">책 검색</string>
    <string name="book_search_view_hint">검색어를 입력해주세요.</string>
    <string name="add_note_toolbar_title">%1$s - 독서노트</string>
    <string name="add_note_excerpt">발췌</string>
    <string name="add_note_memo">메모</string>
    <string name="add_note_text_hint">기억하고 싶은 한마디를 남겨보세요.</string>
    <string name="add_note_page1">참고 페이지</string>
    <string name="add_note_page2">쪽</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
</resources>