<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_navi_menu_library"
            android:icon="@drawable/ic_launcher_foreground"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/main_navi_menu_library"
            />
        <item
            android:id="@+id/main_navi_menu_calender"
            android:icon="@drawable/ic_launcher_foreground"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/main_navi_menu_calender"
            />
        <item
            android:id="@+id/main_navi_menu_addBook"
            android:icon="@drawable/ic_launcher_foreground"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/main_navi_menu_addBook"
            />
        <item
            android:id="@+id/main_navi_menu_account"
            android:icon="@drawable/ic_launcher_foreground"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/main_navi_menu_account"
            />
        <item
            android:id="@+id/main_navi_menu_accountReset"
            android:icon="@drawable/ic_launcher_foreground"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/main_navi_menu_accountReset"
            />
        <item
            android:id="@+id/main_navi_menu_evaluation"
            android:icon="@drawable/ic_launcher_foreground"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/main_navi_menu_evaluation"
            />
        <item
            android:id="@+id/main_navi_menu_infoDesk"
            android:icon="@drawable/ic_launcher_foreground"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/main_navi_menu_infoDesk"
            />
        <item
            android:id="@+id/main_navi_menu_signOut"
            android:icon="@drawable/ic_launcher_foreground"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/main_navi_menu_signOut"
            />
    </group>
</menu>