<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bookedit.BookEditContentsFragment">

    <ImageView
        android:id="@+id/book_edit_book_cover"
        android:layout_width="@dimen/book_edit_book_cover_width"
        android:layout_height="@dimen/book_edit_book_cover_height"
        android:layout_centerHorizontal="true"
        android:background="@color/cardview_dark_background"
        android:layout_marginTop="76dp"/>

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/book_edit_star_rate"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/book_edit_book_cover"
        android:layout_marginTop="12dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/book_edit_star_rate"
        android:layout_marginTop="20dp"
        android:stretchColumns="*">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textColor="@color/body_default"
                android:text="@string/book_edit_title" />

            <EditText
                android:id="@+id/book_edit_input_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:maxLines="1"
                android:hint="@string/book_edit_title_hint"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textColor="@color/body_default"
                android:text="@string/book_edit_writer" />

            <EditText
                android:id="@+id/book_edit_input_author"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:maxLines="1"
                android:hint="@string/book_edit_writer_hint" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textColor="@color/body_default"
                android:text="@string/book_edit_tag" />

            <EditText
                android:id="@+id/book_edit_input_tag"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:maxLines="1"
                android:hint="@string/book_edit_tag_hint" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textColor="@color/body_default"
                android:text="@string/book_edit_publish" />

            <EditText
                android:id="@+id/book_edit_input_publisher"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:maxLines="1"
                android:hint="@string/book_edit_publish_hint" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textColor="@color/body_default"
                android:text="@string/book_edit_ym" />
            <RelativeLayout>
                <EditText
                    android:id="@+id/book_edit_input_ym"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:hint="@string/book_edit_publishYM_hint"
                    android:inputType="date"/>
                <ImageButton
                    android:id="@+id/book_edit_ym_calender_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_calendar"
                    android:layout_alignRight="@id/book_edit_input_ym"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:layout_marginRight="4dp"/>
            </RelativeLayout>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textColor="@color/body_default"
                android:text="@string/book_edit_goal" />
            <RelativeLayout>
                <EditText
                    android:id="@+id/book_edit_input_goal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:hint="@string/book_edit_goalYM_hint"
                    android:inputType="date"/>
                <ImageButton
                    android:id="@+id/book_edit_goal_calender_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_calendar"
                    android:layout_alignRight="@id/book_edit_input_goal"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:layout_marginRight="4dp"/>
            </RelativeLayout>
        </TableRow>
    </TableLayout>
</RelativeLayout>