<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".booknew.BookNewContentsFragment">

    <RelativeLayout
        android:id="@+id/book_new_book_cover_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp">
        <ImageButton
            android:id="@+id/book_new_book_cover_button"
            android:layout_width="@dimen/book_edit_book_cover_width"
            android:layout_height="@dimen/book_edit_book_cover_height"
            android:background="@color/inactive_shape"
            android:layout_centerHorizontal="true"/>
        <ImageButton
            android:id="@+id/book_new_icon_camera"
            android:layout_width="@dimen/book_new_icon_camera_width"
            android:layout_height="@dimen/book_new_icon_camera_height"
            android:src="@drawable/icon_camera"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/book_new_star_rate"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/book_new_book_cover_layout"
        android:layout_marginTop="12dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/book_new_star_rate"
        android:layout_marginTop="20dp"
        android:stretchColumns="*">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textColor="@color/body_default"
                android:text="@string/book_new_title" />

            <EditText
                android:id="@+id/book_new_input_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:maxLines="1"
                android:hint="@string/book_new_title_hint"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textColor="@color/body_default"
                android:text="@string/book_new_writer" />

            <EditText
                android:id="@+id/book_new_input_author"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:maxLines="1"
                android:hint="@string/book_new_writer_hint" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textColor="@color/body_default"
                android:text="@string/book_new_tag" />

            <EditText
                android:id="@+id/book_new_input_tag"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:maxLines="1"
                android:hint="@string/book_new_tag_hint" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textColor="@color/body_default"
                android:text="@string/book_new_publish" />

            <EditText
                android:id="@+id/book_new_input_publisher"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:maxLines="1"
                android:hint="@string/book_new_publish_hint" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textColor="@color/body_default"
                android:text="@string/book_new_ym" />
            <RelativeLayout>
                <EditText
                    android:id="@+id/book_new_input_ym"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:hint="@string/book_new_publishYM_hint"
                    android:inputType="date"/>
                <ImageButton
                    android:id="@+id/book_new_ym_calender_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_calendar"
                    android:layout_alignRight="@id/book_new_input_ym"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:layout_marginRight="4dp"/>
            </RelativeLayout>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textColor="@color/body_default"
                android:text="@string/book_new_goal" />
            <RelativeLayout>
                <EditText
                    android:id="@+id/book_new_input_goal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:hint="@string/book_new_goalYM_hint"
                    android:inputType="date"/>
                <ImageButton
                    android:id="@+id/book_new_goal_calender_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_calendar"
                    android:layout_alignRight="@id/book_new_input_goal"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:layout_marginRight="4dp"/>
            </RelativeLayout>
        </TableRow>
    </TableLayout>
</RelativeLayout>