<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_first_user_horizontal_margin"
    android:paddingRight="@dimen/fragment_first_user_horizontal_margin"
    android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/body_default"
            android:layout_marginTop="92dp"
            android:text="@string/first_user_layout1_text1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textColor="@color/point"
            android:layout_marginTop="4dp"
            android:text="@string/first_user_layout1_text2"/>

        <EditText
            android:id="@+id/first_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:singleLine="true"
            android:inputType="text"
            android:hint="@string/first_user_layout1_text3" />

</LinearLayout>
