<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_first_user_horizontal_margin"
    android:paddingRight="@dimen/fragment_first_user_horizontal_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/body_default"
        android:lineSpacingExtra="8sp"
        android:layout_marginTop="116dp"
        tools:text="@string/first_user_layout2_text1"
        android:background="#FF0000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="@color/point"
        android:lineSpacingExtra="-6sp"
        android:layout_marginTop="4dp"
        tools:text="@string/first_user_layout2_text2"
        android:background="#00FF00"
        />

    <EditText
        android:id="@+id/first_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:hint="@string/first_user_layout2_text3"/>

</LinearLayout>